--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">COMP3074_Project</string>
+    <string name="title_activity_add_restaurant">AddRestaurantActivity</string>
+    <string name="title_activity_restaurant_view">RestaurantViewActivity</string>
+    <string name="title_activity_update_restaurant">UpdateRestaurantActivity</string>
 </resources>
