Still wokring on PLACES API settings in order to get the autocomplete to stay on the screen for longer than one second
Still wokring on PLACES API settings in order to get the autocomplete to stay on the screen for longer than one second

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_add_restaurant">AddRestaurantActivity</string>
     <string name="title_activity_restaurant_view">RestaurantViewActivity</string>
     <string name="title_activity_update_restaurant">UpdateRestaurantActivity</string>
+    <string name="title_activity_maps">Map</string>
+    <!-- <string name="google_maps_key">AIzaSyCd0ICX8mhHa9F-lzo_lwh70DneQTVpBT4</string> -->
 </resources>
