--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="title_activity_restaurant_view">RestaurantViewActivity</string>
     <string name="title_activity_update_restaurant">UpdateRestaurantActivity</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_about">AboutActivity</string>
     <!-- <string name="google_maps_key">AIzaSyCd0ICX8mhHa9F-lzo_lwh70DneQTVpBT4</string> -->
 </resources>
